--- a/package.json
+++ b/package.json
@@ -1,22 +1,43 @@
 {
   "name": "skillswap-app",
-  "version": "0.1.0",
+  "version": "1.0.0",
+  "description": "Application d'échange de compétences entre particuliers",
   "private": true,
   "dependencies": {
-    "@testing-library/dom": "^10.4.1",
-    "@testing-library/jest-dom": "^6.8.0",
-    "@testing-library/react": "^16.3.0",
+    "@testing-library/jest-dom": "^5.16.4",
+    "@testing-library/react": "^13.3.0",
     "@testing-library/user-event": "^13.5.0",
-    "react": "^19.1.1",
-    "react-dom": "^19.1.1",
+    "autoprefixer": "^10.4.21",
+    "bcryptjs": "^2.4.3",
+    "cors": "^2.8.5",
+    "express": "^4.18.2",
+    "jsonwebtoken": "^9.0.2",
+    "lucide-react": "^0.263.1",
+    "postcss": "^8.5.6",
+    "react": "^18.2.0",
+    "react-dom": "^18.2.0",
+    "react-router-dom": "^6.3.0",
     "react-scripts": "5.0.1",
+    "socket.io": "^4.7.2",
+    "socket.io-client": "^4.7.2",
+    "sqlite3": "^5.1.6",
+    "tailwindcss": "^3.4.17",
     "web-vitals": "^2.1.4"
+  },
+  "devDependencies": {
+    "@tailwindcss/forms": "^0.5.3",
+    "concurrently": "^7.6.0",
+    "nodemon": "^3.0.1"
   },
   "scripts": {
     "start": "react-scripts start",
     "build": "react-scripts build",
     "test": "react-scripts test",
-    "eject": "react-scripts eject"
+    "eject": "react-scripts eject",
+    "server": "nodemon server/server.js",
+    "dev": "concurrently \"npm run server\" \"npm start\"",
+    "init-db": "node server/database/seed.js",
+    "setup": "npm install && npm run init-db"
   },
   "eslintConfig": {
     "extends": [
@@ -26,7 +47,7 @@
   },
   "browserslist": {
     "production": [
-      ">0.2%",
+      "^>0.2%",
       "not dead",
       "not op_mini all"
     ],
@@ -35,5 +56,6 @@
       "last 1 firefox version",
       "last 1 safari version"
     ]
-  }
+  },
+  "proxy": "http://localhost:5000"
 }
